# coco-skills

./: CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: validate_skill.py
.github/workflows/: publish-skill-to-aem.yml  publish-skills-on-merge.yml  stage-skills-on-pr.yml  validate-skill.yml
dcr-v1-to-v2/: user_guide.md  v1_v2_mapping.md
dcr-v1-to-v2/discover/: INSTRUCTIONS.md
entity-resolution/: INTEGRATION-TESTING.md  SKILL.md  er_hitl_review.py
entity-resolution/references/: hitl-app.md
entity-resolution/src/: Makefile  pyproject.toml
entity-resolution/src/tests/: conftest.py
entity-resolution/src/tests/fixtures/: financial_data.sql  healthcare_data.sql
entity-resolution/src/tests/phase2_invoke/: test_invoke_healthcare.py  test_invoke_pharma.py  test_invoke_retail.py
entity-resolution/src/tests/phase3_validate/: test_validate_financial.py  test_validate_generic.py  test_validate_healthcare.py  test_validate_pharma.py
manage-zerocopy-sapbdc/: SKILL.md
manage-zerocopy-sapbdc/analyze/: INSTRUCTIONS.md
mlops/: SKILL.md
openflow-spcs-privatelink/: SKILL.md  TROUBLESHOOTING.md
quickstart-guide/: SKILL.md
rbac/: SKILL.md  architecture-patterns.md  database-access-roles.md  schema-access-roles.md  warehouse-access-roles.md
skill-template/: LICENSE  skill-template.md
skills/agent-audit/: LICENSE  (+1 more)
skills/agentic-migration-workshop/: SETUP.md  SKILL.md  pyproject.toml
skills/agentic-migration-workshop/assessment/: INSTRUCTIONS.md
skills/agentic-migration-workshop/data-migration/: INSTRUCTIONS.md
skills/agentic-migration-workshop/powerbi-repointing/: INSTRUCTIONS.md
skills/agentic-migration-workshop/query-translation/: INSTRUCTIONS.md
skills/agentic-migration-workshop/references/: best-practices.md  oracle.md  redshift.md  sqlserver.md  teradata.md
skills/agentic-migration-workshop/schema-conversion/: INSTRUCTIONS.md
skills/agentic-migration-workshop/scripts/: assess_complexity.py
skills/agentic-migration-workshop/snowconvert-ai/: INSTRUCTIONS.md
skills/agentic-migration-workshop/ssis-replatform/: INSTRUCTIONS.md
skills/external-volume/: SKILL.md  cli-reference.md  manifest-flows.md  prereqs.md  pyproject.toml  replay-flows.md  supplemental.md  vol  workflow-s3.md
skills/improve-literal-search-cortex-analyst/: SKILL.md  pyproject.toml
skills/improve-literal-search-cortex-analyst/scripts/: analyze_table.py  apply_changes.py
skills/network-rule/: LICENSE  SKILL.md  cli-reference.md  egress-flows.md  ingress-flows.md  manifest-flows.md  mode-type-reference.md  nw  prereqs.md  pyproject.toml  replay-flows.md  supplemental.md
skills/programmatic-access-token/: SKILL.md  admin-role-setup.md  cli-reference.md  manifest-flows.md  manifest.toml.example  pat  prereqs.md  pyproject.toml  replay-flows.md  supplemental.md
skills/snowpark-connect/: SKILL.md  pyproject.toml
skills/snowpark-connect/examples/: README.md  analysis.json  pyspark_transform.py  pyspark_transform_scos.py  requirements.txt
skills/snowpark-connect/examples/data/: companies.parquet  jobs.parquet
skills/snowpark-connect/examples/pyspark_transform_scos_test/: entrypoint.py  pyspark_transform_scos.py
skills/snowpark-connect/migrate-pyspark-to-snowpark-connect/: INSTRUCTIONS.md
skills/snowpark-connect/references/: logging-monitoring.md  performance-patterns.md  runner-script-template.md
skills/snowpark-connect/scos-local-testing/: INSTRUCTIONS.md
skills/snowpark-connect/scos-performance/: INSTRUCTIONS.md
skills/snowpark-connect/scripts/: analyze_pyspark.py
skills/snowpark-connect/scripts/rag/: __init__.py  base.py  scos_rag.py
skills/snowpark-connect/snowpark-submit/: INSTRUCTIONS.md
skills/snowpark-connect/validate-pyspark-to-snowpark-connect/: INSTRUCTIONS.md
snowflake-docs/: README.md
snowpipe-bcdr/: SKILL.md
(+347 files in other folders)
