[project]
name = "migration-workshop"
version = "0.1.0"
description = "Digital migration workshop skill - assists with database migration to Snowflake from Oracle, Teradata, Redshift, and SQL Server"
requires-python = ">=3.11"
dependencies = [
    "snowflake-connector-python>=3.6.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
]
