[project]
name = "external-volume"
version = "0.2.2"
description = "Cortex Code skill for creating Snowflake external volumes with cloud storage"
requires-python = ">=3.12"
dependencies = [
    "sfutils-extvolumes",
]

[tool.uv.sources]
sfutils-extvolumes = { git = "https://github.com/Snowflake-Labs/sfutils-extvolumes", tag = "v0.2.2" }
