[project]
name = "snowflake-networks"
version = "0.2.2"
description = "Cortex Code skill for creating Snowflake network rules and policies"
requires-python = ">=3.12"
dependencies = [
    "sfutils-networks",
]

[tool.uv.sources]
sfutils-networks = { git = "https://github.com/Snowflake-Labs/sfutils-networks", tag = "v0.2.2" }
