[project]
name = "snowpark-connect"
version = "0.1.0"
description = "Snowpark Connect - Migrate and validate PySpark workloads for Snowflake Snowpark Connect (SCOS)"
requires-python = ">=3.10"
dependencies = [
    "snowflake-snowpark-python>=1.20.0",
    "snowflake-core>=0.10.0",
    "snowflake-ml-python>=1.5.0",
    "snowpark-connect",
    "pyspark>=3.5.0",
    "nbconvert",
]

[tool.uv]
constraint-dependencies = [
    "numba>=0.58.0",
    "llvmlite>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
